Fix navbar z-index, tweak background styles

--- a/site/css/style.css
+++ b/site/css/style.css
@@ -4,16 +4,18 @@ body {
     text-rendering: optimizeLegibility;
     font-family: 'Oxygen', sans-serif;
     line-height: normal;
-    color: #222;
+    background:#252526;
 }
 main {
-    margin: 5em auto;
+    margin: 5em auto 2.5em;
+    padding: 1.5em;
     max-width: 750px;
-}
-#main-content {
-    margin: 0 1.25rem;
+    background: white;
+    border-radius: 13px;
+    color: #222;
 }
 h1, h2, h3, h4, h5, h6 {
+    margin: 1rem auto;
     font-family: 'Playfair Display', serif;
 }
 h1, .h1 {
@@ -50,7 +52,7 @@ code, pre, samp {
 }
 code {
     color: #444;
-    background-color: #f3f3f3;
+    background: #f3f3f3;
     padding: 0 4px;
     border-radius: 4px;
 }
@@ -95,7 +97,7 @@ blockquote:after {
     display: block;
     margin: 0.5em;
     font-size: 1em;
-    opacity: 80%;
+    /* opacity: 80%; */
 }
 .blockquote {
     position: relative;
@@ -106,7 +108,7 @@ cite:before {
     content: "— ";
     margin-right: 0;
     margin-left: auto;
-    opacity: 80%;
+    /* opacity: 80%; */
 }
 .quote {
     margin: 2em auto;
@@ -120,7 +122,8 @@ nav {
     top: 0;
     width: 100%;
     overflow: hidden;
-    background-color: #484b62;
+    background: #484b62;
+    z-index: 1;
 }
 nav ul {
     margin: 0;
@@ -150,15 +153,19 @@ nav a {
     justify-content: center;
 }
 nav .active {
-    background-color: #7c82af;
+    background: #7c82af;
 }
 nav li:hover:not(.active) {
-    background-color: #63688c;
+    background: #63688c;
 }
 nav svg {
     margin: 0 0.5rem;
     position: relative;
     top: -3px;
+}
+.nav-spacer {
+    background: #252526;
+    height: 0.6rem;
 }
 
 /* Utility classes */
@@ -182,7 +189,7 @@ nav svg {
     font-size: small;
     padding: 8px 10px 2px;
     border-radius: 6px 0 0 0;
-    background-color: black;
+    background: black;
     color: white;
     opacity: 0.5;
 }
